<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StereoPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_ip">IP:</string>
    <string name="playsong">Play Song</string>
    <string name="label_port">Port:</string>
    <string name="printsong">Print Song on Debug</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">381Project2</string>
    <string name="label_myip">My IP:</string>

    <string name="stop">Stop</string>
    <string name="refresh_socket">Show Sock.</string>
    <string name="song1">Song 1</string>
    <string name="currentTime">0:00</string>
    <string name="songTime">0:00</string>
    <string name="timeDivider">/</string>
    <string name="songTimeSecond">00</string>
    <string name="songTimeMinute">0</string>
    <string name="timeColon">:</string>
    <string name="currentTimeMinute">0</string>
    <string name="currentTimeSeconds">00</string>
    <string name="PlayModeOrder">Normal</string>
    <string name="PlayModeShuffle">Shuffle</string>
    <string name="PlayModeRepeatOn">One</string>
    
    <string name="play">Play</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="dragdrop">DragDrop</string>
    <string name="piano">Piano</string>
    
    <string name="PlayModeRepeatOff">List</string>
    <string name="title_activity_piano">Piano</string>
    <string name="Do_up">Do</string>
    <string name="Re">Re</string>
    <string name="Mi">Mi</string>
    <string name="Fa">Fa</string>
    <string name="So">So</string>
    <string name="La">La</string>
    <string name="Ti">Ti</string>  
    <string name="Do_down">Do</string>  

</resources>