<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Piano" >

    <Button
        android:id="@+id/DoD"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/piano_do_down"
        android:text="@string/Do_down"
        android:onClick="playDoD" />

    <Button
        android:id="@+id/Re"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/piano_re"
        android:text="@string/Re"
        android:onClick="playRe" />

    <Button
        android:id="@+id/Mi"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/piano_mi"
        android:text="@string/Mi"
        android:onClick="playMi" />

    <Button
        android:id="@+id/Fa"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/piano_fa"
        android:text="@string/Fa"
        android:onClick="playFa" />

    <Button
        android:id="@+id/So"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/piano_sol"
        android:text="@string/So"
        android:onClick="playSo" />

    <Button
        android:id="@+id/La"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/piano_la"
        android:text="@string/La"
        android:onClick="playLa" />

    <Button
        android:id="@+id/Ti"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/piano_ti"
        android:text="@string/Ti"
        android:onClick="playTi" />

    <Button
        android:id="@+id/DoU"
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/piano_do_up"
        android:text="@string/Do_up"
        android:onClick="playDoU" />

</LinearLayout>